fix: overflow for contact box

--- a/src/components/employeeCard/employeeCard.module.css
+++ b/src/components/employeeCard/employeeCard.module.css
@@ -9,6 +9,8 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 0.375rem;
+
+  overflow: hidden;
 }
 
 .contactInfo {
@@ -26,6 +28,12 @@
 .employeeEmail a,
 .employeePhone a {
   color: currentColor;
+}
+.employeeEmail a {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .employeeWrapper {
